Watermark alignment fix

--- a/Payroll/WebContent/resources/css/overwrite.css
+++ b/Payroll/WebContent/resources/css/overwrite.css
@@ -13,7 +13,7 @@ body {
 	background-image: url("../images/CBK_Logo.png");
 	background-position: center 130px;	
     background-repeat: no-repeat;
-    background-size: 40%;
+    background-size: 38%;
 }
 
 a,
